--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 <body>
   {% set page_dict={'index': ['ホーム', 'home'],
                     'settings': ['設定', 'settings']} %}
-  <div class="wrapper ">
+  <div class="wrapper">
     <div class="sidebar" data-color="green" data-background-color="white">
       <div class="logo">
         <a href="{{ url_for("index") }}" class="simple-text logo-mini">
@@ -87,6 +87,20 @@
                   <i class="material-icons">notifications</i> Notifications
                 </a>
               <!-- your navbar here -->
+                <li class="nav-item dropdown">
+                <a class="nav-link" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="material-icons">person</i>
+                  <p class="d-lg-none d-md-block">
+                    Account
+                  </p>
+                <div class="ripple-container"></div></a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
+                  <a class="dropdown-item" href="#">Profile<div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 50px; top: 26px; background-color: rgb(255, 255, 255); transform: scale(18.75);"></div></div></a>
+                  <a class="dropdown-item" href="#">Settings<div class="ripple-container"></div></a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Log out<div class="ripple-container"><div class="ripple-decorator ripple-on ripple-out" style="left: 77px; top: 27px; background-color: rgb(255, 255, 255); transform: scale(18.75);"></div></div></a>
+                </div>
+                </li>
             </ul>
           </div>
       </nav>
