--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "dashboard.html" %}
 {% block content %}
 <div class="row">
 {% for key, value in streamer_list.items() %}
