--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,7 +40,7 @@ The above copyright notice and this permission notice shall be included in all c
 
 <body class="">
   <div class="wrapper">
-    {% if "user_id" in session %}
+    {% if "discord_user_id" in session %}
     {% set page_dict={'index': ['ホーム', 'home'],
                       'add_channels': ['追加', 'add'],
                       'settings': ['設定', 'settings']} %}
