--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
           <u>Stream Portal</u>
         </a>
           {% if "discord_user_id" in session %}
-              <h6 class="simple-text mt-2" style="font-size: 1rem; margin-bottom: 0">ログイン中：{{ session["user_name"] }}</h6>
+              <h6 class="simple-text mt-2" style="font-size: 1rem; margin-bottom: 0">ログイン中：{{ session["discord_user_name"] }}</h6>
               <div class="col text-center">
                 <a class="btn" href="{{ url_for('logout') }}?return_url={{ url_for("index") }}" style="background-color: lightseagreen; color: white">LOGOUT</a>
               </div>
