--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -121,9 +121,16 @@ The above copyright notice and this permission notice shall be included in all c
                   </p>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
+                  {% if "discord_user_id" in session %}
+                  <p class="dropdown-item">{{ session["discord_user_name"] }}でログイン中</p>
+                  {% endif %}
                   <a class="dropdown-item" href="https://www.mildom.com/follow?tab=following">Mildomへ</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Log out</a>
+                  {% if "discord_user_id" in session %}
+                  <a class="dropdown-item" href="{{ url_for("logout", redirect_url=request.url)}}">Log out</a>
+                  {% else %}
+                  <a class="dropdown-item" href="{{ url_for("login") }}">Log in</a>
+                  {% endif %}
                 </div>
               </li>
             </ul>
