--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,12 +8,12 @@
           <p class="card-category">Complete your profile</p>
         </div>
         <div class="card-body">
-            <form action="{{ url_for("register_mildom_account") }}">
+            <form action="{{ url_for("register_mildom_account") }}" method="post">
                 <div class="row">
                 <div class="col-md-8">
                     <div class="form-group bmd-form-group">
                         <label class="bmd-label-floating">MildomのIDを入力(数字のみ)</label>
-                        <input type="text" minlength="8" maxlength="8" pattern="^[0-9]+$" required class="form-control"
+                        <input id="mildom_id" type="text" minlength="8" maxlength="8" pattern="^[0-9]+$" required class="form-control"
                                placeholder="{{ mildom_id }}">
                     </div>
                 </div>
