--- a/templates/settings.html
+++ b/templates/settings.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
             </div>
-            <input class="btn btn-facebook pull-right" type="submit" value="登録">
+            <button type="submit" class="btn btn-facebook pull-right">登録</button>
             </form>
         </div>
       </div>
