--- a/templates/add_channels.html
+++ b/templates/add_channels.html
@@ -22,7 +22,7 @@
                     <tr>
                         <td><img src="{{ i["avatar"] }}" alt="streamer_icon" style="height:2rem; margin-right: 1rem;">{{ i["loginname"] }}</td>
                         <td>
-                            {% if i["anchor"]=="11" %}
+                            {% if i["anchor_live"]==11 %}
                             <a href="https://www.mildom.com/{{ i["user_id"] }}">配信中</a>
                             {% else %}
                             オフライン
