--- a/templates/home.html
+++ b/templates/home.html
@@ -1,30 +1,39 @@
 {% extends "dashboard.html" %}
 {% block content %}
-<div class="row">
-{% for key, value in streamer_list.items() %}
-    <div class="col-lg-{{ col_lg_number }} col-md-6 col-sm-6">
-      <div class="card card-stats">
-          <div class="card-header card-header-success card-header-icon">
-              <div class="card-icon">
-                  <img class="material-icons" src="{{ value[2] }}" alt="streamer profile" style="width: 86px">
+    <h2 class="header-title">配信中のチャンネル</h2>
+    <div class="row">
+    {% for key, value in streamer_list.items() %}
+        {% if value[1]==True %}
+        <div class="col-lg-{{ col_lg_number }} col-md-6 col-sm-6">
+          <div class="card card-stats">
+              <div class="card-header card-header-icon card-header-success">
+                  <div class="card-icon">
+                      {% if value[3]==None %}
+                      <img class="material-icons" src="https://www.mildom.com/assets/share_cover.png" alt="streamer profile" style="width: 86px">
+                      {% else %}
+                      <img class="material-icons" src="{{ value[3] }}" alt="streamer profile" style="width: 86px">
+                      {% endif %}
+                  </div>
+                  <p class="card-category" style="border-bottom: 0">{{ key }}<br>
+                  🔴{{ value[5] }}
+                  </p>
+                  {% if value[1] == True %}
+                      <h3 class="card-link mb-0 mt-0">
+                      <a href="https://www.mildom.com/{{ value[6] }}" style="font-size: 1rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ value[4] }}</a>
+                      </h3>
+                      {% else %}
+                      <h3 class="card-title">オフライン</h3>
+                  {% endif %}
               </div>
-              <p class="card-category">{{ key }}</p>
-              {% if value[1] == True %}
-                  <h3 class="card-link mt-0">
-                  <a href="https://www.mildom.com/{{ value[3] }}">配信中</a>
-                  </h3>
-                  {% else %}
-                  <h3 class="card-title">オフライン</h3>
-              {% endif %}
-          </div>
-          <div class="card-footer">
-              <div class="stats">
-                  <i class="material-icons text-gray">info</i>
-                  状態は必ずしも最新でない可能性があります。
+              <div class="card-footer">
+                  <div class="stats">
+                      <i class="material-icons text-gray">info</i>
+                      状態は必ずしも最新でない可能性があります。
+                  </div>
               </div>
           </div>
-      </div>
+        </div>
+        {% endif %}
+    {% endfor %}
     </div>
-{% endfor %}
-</div>
 {% endblock %}
