--- a/templates/home.html
+++ b/templates/home.html
@@ -8,22 +8,50 @@
           <div class="card card-stats">
               <div class="card-header card-header-icon card-header-success">
                   <div class="card-icon">
-                      {% if value[3]==None %}
+                      {% if value[4]==None %}
                       <img class="material-icons" src="https://www.mildom.com/assets/share_cover.png" alt="streamer profile" style="width: 86px">
                       {% else %}
-                      <img class="material-icons" src="{{ value[3] }}" alt="streamer profile" style="width: 86px">
+                      <img class="material-icons" src="{{ value[4] }}" alt="streamer profile" style="width: 86px">
                       {% endif %}
                   </div>
-                  <p class="card-category" style="border-bottom: 0">{{ key }}<br>
+                  <p class="card-category" style="margin-bottom: 0">{{ key }}<br>
                   🔴{{ value[5] }}
                   </p>
-                  {% if value[1] == True %}
-                      <h3 class="card-link mb-0 mt-0">
-                      <a href="https://www.mildom.com/{{ value[6] }}" style="font-size: 1rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ value[4] }}</a>
-                      </h3>
+                  <h3 class="card-link mb-0 mt-0">
+                  <a href="https://www.mildom.com/{{ value[6] }}"
+                     style="font-size: 1rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ value[3] }}</a>
+                  </h3>
+              </div>
+              <div class="card-footer">
+                  <div class="stats">
+                      <i class="material-icons text-gray">info</i>
+                      状態は必ずしも最新でない可能性があります。
+                  </div>
+              </div>
+          </div>
+        </div>
+        {% endif %}
+    {% endfor %}
+    </div>
+    <h2 class="header-title">オフラインのチャンネル</h2>
+    <div class="row">
+    {% for key, value in streamer_list.items() %}
+        {% if value[1]==False %}
+        <div class="col-lg-{{ col_lg_number }} col-md-6 col-sm-6">
+          <div class="card card-stats">
+              <div class="card-header card-header-icon card-header-success">
+                  <div class="card-icon">
+                      {% if value[4]==None %}
+                      <img class="material-icons" src="https://www.mildom.com/assets/share_cover.png" alt="streamer profile" style="width: 86px">
                       {% else %}
-                      <h3 class="card-title">オフライン</h3>
-                  {% endif %}
+                      <img class="material-icons" src="{{ value[4] }}" alt="streamer profile" style="width: 86px">
+                      {% endif %}
+                  </div>
+                  <p class="card-category" style="margin-bottom: 0">{{ key }}</p>
+                  <h3 class="card-link mb-0 mt-0">
+                      <a href="https://www.mildom.com/{{ value[6] }}"
+                         style="font-size: 1rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ value[3] }}</a>
+                  </h3>
               </div>
               <div class="card-footer">
                   <div class="stats">
