カードの幅をオンラインとオフラインで変えるように

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,24 +2,23 @@
 {% block content %}
     <h2 class="header-title">配信中のチャンネル</h2>
     <div class="row">
-    {% for key, value in streamer_list.items() %}
-        {% if value[1]==True %}
-        <div class="col-lg-{{ col_lg_number }} col-md-6 col-sm-6">
+    {% for key, value in online_streamer_list.items() %}
+        <div class="col-lg-{{ online_col_lg_number }} col-md-6 col-sm-6">
           <div class="card card-stats">
               <div class="card-header card-header-icon card-header-success">
                   <div class="card-icon">
-                      {% if value[4]==None %}
+                      {% if value[3]==None %}
                       <img class="material-icons" src="https://www.mildom.com/assets/share_cover.png" alt="streamer profile" style="width: 86px">
                       {% else %}
-                      <img class="material-icons" src="{{ value[4] }}" alt="streamer profile" style="width: 86px">
+                      <img class="material-icons" src="{{ value[3] }}" alt="streamer profile" style="width: 86px">
                       {% endif %}
                   </div>
                   <p class="card-category" style="margin-bottom: 0">{{ key }}<br>
                   🔴{{ value[5] }}
                   </p>
                   <h3 class="card-link mb-0 mt-0">
-                  <a href="https://www.mildom.com/{{ value[6] }}"
-                     style="font-size: 1rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ value[3] }}</a>
+                  <a href="https://www.mildom.com/{{ value[5] }}"
+                     style="font-size: 1rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ value[2] }}</a>
                   </h3>
               </div>
               <div class="card-footer">
@@ -30,27 +29,25 @@
               </div>
           </div>
         </div>
-        {% endif %}
     {% endfor %}
     </div>
     <h2 class="header-title">オフラインのチャンネル</h2>
     <div class="row">
-    {% for key, value in streamer_list.items() %}
-        {% if value[1]==False %}
-        <div class="col-lg-{{ col_lg_number }} col-md-6 col-sm-6">
+    {% for key, value in offline_streamer_list.items() %}
+        <div class="col-lg-{{ offline_col_lg_number }} col-md-6 col-sm-6">
           <div class="card card-stats">
               <div class="card-header card-header-icon card-header-success">
                   <div class="card-icon">
-                      {% if value[4]==None %}
+                      {% if value[3]==None %}
                       <img class="material-icons" src="https://www.mildom.com/assets/share_cover.png" alt="streamer profile" style="width: 86px">
                       {% else %}
-                      <img class="material-icons" src="{{ value[4] }}" alt="streamer profile" style="width: 86px">
+                      <img class="material-icons" src="{{ value[3] }}" alt="streamer profile" style="width: 86px">
                       {% endif %}
                   </div>
                   <p class="card-category" style="margin-bottom: 0">{{ key }}</p>
                   <h3 class="card-link mb-0 mt-0">
-                      <a href="https://www.mildom.com/{{ value[6] }}"
-                         style="font-size: 1rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ value[3] }}</a>
+                      <a href="https://www.mildom.com/{{ value[5] }}"
+                         style="font-size: 1rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ value[2] }}</a>
                   </h3>
               </div>
               <div class="card-footer">
@@ -61,7 +58,6 @@
               </div>
           </div>
         </div>
-        {% endif %}
     {% endfor %}
     </div>
 {% endblock %}
