--- a/templates/settings.html
+++ b/templates/settings.html
@@ -12,8 +12,8 @@
                 <div class="row">
                 <div class="col-md-8">
                     <div class="form-group bmd-form-group">
-                        <label class="bmd-label-floating">MildomのIDを入力(数字のみ)</label>
-                        <input name="mildom_id" type="text" minlength="8" maxlength="8" pattern="^[0-9]+$" required class="form-control"
+                        <label for="mildom_id" class="bmd-label-floating">MildomのIDを入力(数字のみ)</label>
+                        <input id="mildom_id" name="mildom_id" type="text" minlength="8" maxlength="8" pattern="^[0-9]+$" required class="form-control"
                                placeholder="{{ mildom_id }}">
                     </div>
                 </div>
