iosでVLCを起動するテスト

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,8 +46,7 @@
                   </div>
                   <p class="card-category" style="margin-bottom: 0">{{ key }}</p>
                   <h3 class="card-link mb-0 mt-0">
-                      <a href="https://www.mildom.com/{{ value[5] }}"
-                         style="font-size: 1rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ value[2] }}</a>
+                      <a href="https://www.mildom.com/{{ value[5] }}" style="font-size: 1rem;"><p class="one-line-text">{{ value[2] }}</p></a>
                   </h3>
               </div>
               <div class="card-footer">
