--- a/templates/player.html
+++ b/templates/player.html
@@ -7,7 +7,10 @@
     </head>
     <body>
     <a href="vlc-x-callback://x-callback-url/stream?url=https://d3ooprpqd2179o.cloudfront.net/vod/jp/10054818/10054818-1626393700/origin/raw/10054818-1626393700_raw.m3u8"
-    >launch VLC</a>
+    >launch VLC for ios</a>
+    <a href="vlc://https://d3ooprpqd2179o.cloudfront.net/vod/jp/10054818/10054818-1626393700/origin/raw/10054818-1626393700_raw.m3u8">
+        launch VLC for Android
+    </a>
         <video id="video_smaple" controls></video>
         <script>
             if(Hls.isSupported()) {
