--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,7 +31,8 @@ The above copyright notice and this permission notice shall be included in all c
   <link rel="icon" href="/static/img/favicon.webp">
   <!-- OGG -->
   <title>Stream Portal</title>
-  <meta property="og:title" content="Stream Portal ベータ" />
+  <meta property="og:title" content="Stream Portal(α)" />
+  <meta property="og:site_name" content="Stream Portal 配信ポータルサイト" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ request.url }}" />
   <meta property="og:image" content="/static/img/albot_icon_large.png" />
