--- a/templates/test.html
+++ b/templates/test.html
@@ -20,7 +20,7 @@
   <link rel="icon" href="/static/img/favicon.webp">
   <!-- OGG -->
   <title>Stream Portal</title>
-  <meta property="og:site_name" content="日本語OGP" />
+  <meta property="og:title" content="日本語OGP" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ request.url }}" />
   <meta property="og:image" content="/static/img/albot_icon_large.png" />
