--- a/templates/test.html
+++ b/templates/test.html
@@ -20,11 +20,10 @@
   <link rel="icon" href="/static/img/favicon.webp">
   <!-- OGG -->
   <title>Stream Portal</title>
-  <meta property="og:title" content="日本語OGP" />
+  <meta property="og:title" content="日本語OGP タイトルのみ" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ request.url }}" />
   <meta property="og:image" content="/static/img/albot_icon_large.png" />
-  <meta property="og:description" content="説明" />
   <meta name="theme-color" content="#FFFFFF">
 </head>
 <body>
