--- a/templates/test.html
+++ b/templates/test.html
@@ -18,11 +18,10 @@
   <!-- Material Kit CSS -->
   <link href="/static/css/material-dashboard.css?v=2.1.2" rel="stylesheet" />
   <link rel="icon" href="/static/img/favicon.webp">
-  <!-- OGG -->
+  <!-- OGP -->
   <title>Stream Portal</title>
-  <meta property="og:title" content="日本語OGP og:urlなし" />
+  <meta property="og:title" content="日本語OGP og:urlなし of:imageなし" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/static/img/albot_icon_large.png" />
   <meta name="theme-color" content="#FFFFFF">
 </head>
 <body>
